A new class, depending on the lion from the feline