@@ -3,64 +3,51 @@ package com.example;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
-
-import java.util.Arrays;
-import java.util.Collection;
 import java.util.List;
-
-import static org.junit.Assert.assertEquals;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
+import static org.junit.Assert.*;
 
 @RunWith(Parameterized.class)
+
 public class AnimalTest {
+    Animal animal = new Animal();
+    private final String animalKindTest;
+    private final List<String> listFoodTest;
 
-    private final String sex;
-    private final boolean expectedHasMane;
-
-    public AnimalTest(String sex, boolean expectedHasMane) {
-        this.sex = sex;
-        this.expectedHasMane = expectedHasMane;
+    public AnimalTest (String animalKindTest, List<String> listFoodTest) {
+        this.animalKindTest = animalKindTest;
+        this.listFoodTest = listFoodTest;
     }
 
     @Parameterized.Parameters
-    public static Collection<Object[]> data() {
-        return Arrays.asList(new Object[][]{
-                {"Самец", true},
-                {"Самка", false}
-        });
+    public static Object[][] getFoodInput() {
+        return new Object[][]{
+                {"Травоядное", List.of("Трава", "Различные растения")},
+                {"Хищник", List.of("Животные", "Птицы", "Рыба")},
+        };
     }
 
     @Test
-    public void testDoesHaveMane() throws Exception {
-        Feline mockFeline = mock(Feline.class);
-        Lion lion = new Lion(sex);
-        setFeline(lion, mockFeline);
-
-        assertEquals(expectedHasMane, lion.doesHaveMane());
+    public void getFood_PositiveTest() throws Exception {
+        List <String> actualListOfFeed = animal.getFood(animalKindTest);
+        assertEquals(listFoodTest, actualListOfFeed);
     }
 
     @Test
-    public void testGetFood() throws Exception {
-        Feline mockFeline = mock(Feline.class);
-        List<String> expectedFood = List.of("Животные", "Птицы");
-        when(mockFeline.getFood("Хищник")).thenReturn(expectedFood);
-
-        Lion lion = new Lion(sex);
-        setFeline(lion, mockFeline);
-
-        List<String> food = lion.getFood();
-
-        assertEquals(expectedFood, food);
+    public void getFamily_PositiveTest() {
+        String expected = "Существует несколько семейств: заячьи, беличьи, мышиные, кошачьи, псовые, медвежьи, куньи";
+        String actual = animal.getFamily();
+        assertEquals(expected, actual);
     }
-
-    private void setFeline(Lion lion, Feline feline) {
+    
+    @Test
+    public void getFood_FailTest() {
         try {
-            java.lang.reflect.Field field = Lion.class.getDeclaredField("feline");
-            field.setAccessible(true);
-            field.set(lion, feline);
+            animal.getFood("Неизвестный вид животного");
+            fail("Неизвестный вид животного");
         } catch (Exception e) {
-            throw new RuntimeException(e);
+            assertEquals("Неизвестный вид животного, используйте значение Травоядное или Хищник",
+                    e.getMessage());
         }
     }
 }
+
